K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers: 
        - name: platformservice
          image: kaushikchitipothu/platformservice:latest
