K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers: 
        - name: commandservice
          image: kaushikchitipothu/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-svc
spec:
  type: ClusterIP
  selector: 
    app: commandservice
  ports:
    - name: commandservice
      port: 8080
      targetPort: 8080
